# elf2hex

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  freedom-bin2hex.py  freedom-bin2hex.sh  freedom-elf2bin.sh  freedom-elf2hex.sh
.github/workflows/: release.yml
scripts/: git-version
